--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/bulma": "^1.0.3",
     "@nuxtjs/font-awesome": "^1.0.2",
     "axios": "^0.16.2",
+    "buefy": "^0.5.4",
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "node-sass": "^4.5.3",
